# StudyTracker-desktop

./: .gitignore  .prettierignore  README.en.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md
src/: App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_foundation.sql
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/adapters/persistence/: daily_plans.rs  mod.rs  sessions.rs
src-tauri/src/application/: daily_plans.rs  mod.rs  sessions.rs  settings.rs  subjects.rs  tasks.rs
src-tauri/src/domain/: daily_plan.rs  id.rs  mod.rs  session.rs  settings.rs  study_task.rs  subject.rs  time.rs
src-tauri/src/ports/: repository.rs
src-tauri/src/runtime/: mod.rs
src/components/: app-shell.tsx
src/design/: contrast.test.ts
src/hooks/: use-theme.ts
src/platform/: foundation.ts
src/test/: setup.ts
