[package]
name = "studytracker-desktop"
version = "0.1.0"
description = "本地優先的個人學習規劃與專注紀錄工具"
authors = ["StudyTracker Contributors"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "studytracker_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10.4"
iana-time-zone = "0.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = [] }
thiserror = "2.0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
uuid = { version = "1.24.0", features = ["serde", "v7"] }

[dev-dependencies]
tempfile = "3"
